kubernetes/apps/ntfy/_base/ntfy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
spec:
  hostnames: ["ntfy.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: ntfy
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: ClusterIP
  selector:
    app: ntfy
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master-standalone/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.29.0@sha256:4c599cf0818965782f93f652bd843e92714992e84d6b88ad17713dc0951cda1f
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 60Mi
            limits:
              memory: 60Mi
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
            - name: volume
              mountPath: /var/lib/ntfy
      volumes:
        - name: config
        - name: volume
          persistentVolumeClaim:
            claimName: ntfy
